fix: add correct keyboard navigation through downshift

--- a/packages/pluggableWidgets/language-selector-web/src/ui/LanguageSelector.scss
+++ b/packages/pluggableWidgets/language-selector-web/src/ui/LanguageSelector.scss
@@ -39,7 +39,8 @@
             &.active {
                 font-weight: 600;
             }
-            &:hover {
+            &:hover,
+            &.highlighted {
                 background: #ffffff;
             }
         }
